force-app/main/default/objects/GfPurchaseOrderItem__c/GfPurchaseOrderItem__c.object-meta.xml
<CustomObject>
    <label>발주서 상세</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>