force-app/main/default/objects/GfPurchaseOrderItem__c/fields/AmountKRW__c.field-meta.xml
<CustomField>
    <fullName>AmountKRW__c</fullName>
    <label>Amount KRW</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>