force-app/main/default/objects/GfPurchaseOrderItem__c/fields/AmountLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountLocal__c</fullName>
    <label>Amount Local</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>