force-app/main/default/objects/GfPurchaseOrderItem__c/fields/AmountUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountUSD__c</fullName>
    <label>Amount USD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>