force-app/main/default/objects/GfPurchaseOrderItem__c/fields/ERPDocNo__c.field-meta.xml
<CustomField>
    <fullName>ERPDocNo__c</fullName>
    <label>ERP Doc Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>