force-app/main/default/objects/GfPurchaseOrderItem__c/fields/FmOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>FmOrderAmount__c</fullName>
    <formula>OrderPrice__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>