force-app/main/default/objects/GfPurchaseOrderItem__c/fields/IFExternalKey__c.field-meta.xml
<CustomField>
    <fullName>IFExternalKey__c</fullName>
    <label>IFExternalKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>