force-app/main/default/objects/GfPurchaseOrderItem__c/fields/MaterialCode__c.field-meta.xml
<CustomField>
    <fullName>MaterialCode__c</fullName>
    <label>Material Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>