force-app/main/default/objects/GfPurchaseOrderItem__c/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>