force-app/main/default/objects/GfPurchaseOrderItem__c/fields/OrderPrice__c.field-meta.xml
<CustomField>
    <fullName>OrderPrice__c</fullName>
    <label>OrderPrice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>