force-app/main/default/objects/GfPurchaseOrderItem__c/fields/PlantCode__c.field-meta.xml
<CustomField>
    <fullName>PlantCode__c</fullName>
    <label>Plant Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>