force-app/main/default/objects/GfPurchaseOrderItem__c/fields/PurchaseOrderID__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderID__c</fullName>
    <label>Purchase Order ID</label>
    <referenceTo>GfPurchaseOrder__c</referenceTo>
    <relationshipName>Gf_Purchase_Order_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>